Optimize Java client performance: reduce allocations and improve concurrency
- Remove connection validation overhead in hot path (trust the pool)
- Cache server address parsing to avoid repeated split/parse
- Optimize request encoding with pre-calculated buffer sizes
- Replace String.format() with StringBuilder in benchmark
- Increase concurrency limit (200 vs 100) for better parallelism
- Use virtual threads properly for blocking I/O operations

Performance improvements:
- Throughput: ~43k ops/sec (up from ~40k)
- Reduced allocations in hot paths
- Better utilization of virtual threads for I/O-bound operations